# rusty-musicbot

./: .gitignore  Cargo.toml  README.adoc  build.rs
.github/workflows/: build-and-check.yaml  build-push-artifacts.yml
src/: events.rs  main.rs  utils.rs
src/commands/: about.rs  help.rs  mod.rs  pause.rs  ping.rs  play.rs  playnext.rs  queue.rs  repeat.rs  resume.rs  search.rs  shuffle.rs  skip.rs  stop.rs  version.rs
src/commands/helpers/: mod.rs
