[package]
name = "rusty-musicbot"
version = "0.1.0"
authors = ["Mintd <johnmax2468@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.28"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.24"
url = "2.2.2"

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["cache", "collector", "framework", "standard_framework", "voice", "native_tls_backend"]

[dependencies.songbird]
version = "0.2.0"
default-features = false
features = ["builtin-queue", "gateway", "driver", "serenity-native"]

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "process", "signal", "rt-multi-thread"]

[build-dependencies.vergen]
version = "5.1.15"
default-features = false
features = ["build", "rustc", "git"]
